# Oauth_Service

./: README.md  compose.yml
auth_service/: dockerfile  pyproject.toml
auth_service/app/: main.py
